--- a/index.html
+++ b/index.html
@@ -18,10 +18,11 @@
     --bc: white;
     --ac: lightgray;
     /* --ff: Inter, sans-serif; */
-    --ff: 'univ';
+    --ff: 'abc';
     --fs: small;
     --hp: 4vw;
 }
+
 
 ::selection{ background-color: rgb(182, 237, 255); }
 
@@ -253,6 +254,17 @@ div.chem:hover{
 #chemEle{
     font-weight: bold;
 }
+
+/* #mobMenuTogg::before{
+    content: '[';
+    font-family: inherit;
+}
+
+#mobMenuTogg::after{
+    content: ']';
+    font-family: inherit;
+} */
+
 
 @media (orientation: landscape) {
 article{display: flex; }
