--- a/glyph.html
+++ b/glyph.html
@@ -46,7 +46,7 @@ label{
 
 
 article{
-    margin: 1em;
+    margin: 2vh 5vw;
 }
 
 .annot{
@@ -70,7 +70,7 @@ label{
 </style>
 </head>
 <body style="margin: 0; font-family: passenger;"> 
-    <footer style="background-color: black; padding: 2em; color: white;">
+    <footer style="background-color: black; padding: 5vh 5vw; color: white;">
         <h1>Differences of glyphs in Chinese characters among different regions</h1> 
         <p style=" color: lightgray;">Oct 18, 2024</p>
     </footer>
@@ -123,7 +123,7 @@ On the other hand, in regions like Taiwan and Hong Kong, where Traditional Chine
 </div>
 </div>
 
-<footer style="background-color: black; padding: 2em; color: white; margin-top: 2em;">
+<footer style="background-color: black; padding: 5vh 5vw; color: white; margin-top: 2em;">
     <!-- <hr> -->
     <p class="annot" id="annot1"><a href="#annot1o">1</a>:<br>
         SC: Simplied Chinese used in PRC, Singapore, Malaysia<br>
