--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <link rel="preconnect" href="https://rsms.me/">
 <link rel="stylesheet" href="https://rsms.me/inter/inter.css">
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
-<!-- <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" /> -->
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 <title>Lingyu Zhou</title>
 <style>
@@ -265,6 +265,8 @@ div.chem:hover{
     font-family: inherit;
 } */
 
+#resample{background-color: transparent}
+#resample:hover{ background-color: #eee; }
 
 @media (orientation: landscape) {
 article{display: flex; }
@@ -314,6 +316,12 @@ article > div{
     onclick="document.querySelector('#end').scrollIntoView({ behavior: 'smooth' });">arrow_downward</div>
 </div> -->
 
+<div id="fest" style="width: 100%; position: fixed; bottom: 0; left: 0; background-color: #0093E9; display: flex; box-sizing: border-box; z-index: 999;
+background: var(--bc); padding: 2rem var(--hp); border-top: 1px solid var(--tc);" >
+    <div style="width: 90%;font-size: larger;">Celebrating Gregorian Calendar New Year!</div>
+    <div style="width: 10%;font-size: larger; text-align: right; cursor: pointer;" onclick="fest.style.display='none'" >&times;</div>
+</div>
+
 <nav style="display: flex; margin: 0; position: sticky; top:0; transition: background-color .5s;
 background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;">
     <div id="index" style="cursor: pointer;margin: auto 0; transition: .5s; font-size: larger;" translate="no" 
@@ -329,7 +337,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <a class="noul" href="https://xolyn.github.io/fg2.html">Font Studio</a>
         <!-- <a href="https://xolyn.github.io/widgets">Gadgetz</a> -->
         <a class="noul" href="https://zly.vg/cv.pdf">Résumé</a>
-        <a style="font-family:'Bootstrap-icons'; font-size: smaller; width: fit-content;" href="javascript: themeTogg()" class="noarr noul">&#xF288;</a>
+        <a translate="no" style="font-family:'Bootstrap-icons'; font-size: smaller; width: fit-content;" href="javascript: void(0)" onclick="changeTheme()" class="noarr noul">&#xF288;</a>
     </div>
 
     <div id="mobMenuTogg" style="margin: auto 0; cursor: pointer; border-radius: .2rem; padding: .3rem .5rem; transition: .3s;"
@@ -357,9 +365,11 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         My specialties are software engineering, math, data analysis, and data visualization.
         
         My research interests are computational social science and affective computing, particularly in using data science methods and natural language processing to model and analyze emotional and behavioral trends within large-scale social networks. My goal is to explore how computational models can provide insights into social phenomena, group dynamics, and collective emotions, utilizing vast social media data to understand real-world interactions and sentiments. This area lies at the intersection of statistical modeling, machine learning, and NLP, with applications in prediction of social behavior, sentiment analysis, and trend forecasting.
+    </p>
 
-        
-        I am also interested in biology, botany, and etymology.         <span style="font-weight: 400;">&nbsp;</span>
+    <p>
+        I am also interested in etymology, biology, and botany.
+        <span style="font-weight: 400;">&nbsp;</span>
         <span style="font-weight: 500;">&nbsp;</span>
         <span style="font-weight: 600;">&nbsp;</span>
         <span style="font-weight: 700;">&nbsp;</span>
@@ -516,8 +526,8 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 </div>
 </article>
 
-<article id="contact">
-    <h1 style="">contact</h1>
+<article id="connect">
+    <h1 style="">connect</h1>
     <!-- <p>
         <div style="color:gray">email</div>
         <div>lz568 [at] cornell [dot] edu</div><br>
@@ -568,8 +578,12 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 </div>
 </article>
 
-<article>
+<article style="margin-top: 2em;">
     <div id="quote"> <i></i> <p></p></div>
+    <button id="resample" style="transition: .3s; cursor: pointer; border-radius: .5rem; border: 1px solid #eee; padding: .5rem; height: min-content;" 
+    onclick="var tempq = quotes[Math.floor(Math.random() * quotes.length)];
+    document.querySelector('#quote i').innerHTML=tempq[0];
+    document.querySelector('#quote p').innerHTML=tempq[1]">resample</button>
 </article>
 
 <footer>
@@ -625,16 +639,6 @@ backdrop-filter: blur(5px); -webkit-backdrop-filter: blur(5px);  position: fixed
 
 <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js" ></script>
 <script>
-function themeTogg(){
-    if (document.documentElement.style.getPropertyValue('--tc')==='white'){
-        document.documentElement.style.setProperty('--tc', 'black');
-        document.documentElement.style.setProperty('--bc', 'white');
-    }
-    else{
-        document.documentElement.style.setProperty('--tc', 'white');
-        document.documentElement.style.setProperty('--bc', 'black');
-    }
-}
 
 const swiper = new Swiper('.swiper', {
 slidesPerView: 1,
