--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     --bc: white;
     --ac: lightgray;
     /* --ff: Inter, sans-serif; */
-    --ff: 'abc';
+    --ff: 'univ';
     --fs: small;
     --hp: 4vw;
 }
