--- a/index.html
+++ b/index.html
@@ -316,11 +316,11 @@ article > div{
     onclick="document.querySelector('#end').scrollIntoView({ behavior: 'smooth' });">arrow_downward</div>
 </div> -->
 
-<div id="fest" style="width: 100%; position: fixed; bottom: 0; left: 0; background-color: #0093E9; display: flex; box-sizing: border-box; z-index: 999;
+<!-- <div id="fest" style="width: 100%; position: fixed; bottom: 0; left: 0; background-color: #0093E9; display: flex; box-sizing: border-box; z-index: 999;
 background: var(--bc); padding: 2rem var(--hp); border-top: 1px solid var(--tc);" >
     <div style="width: 90%;font-size: larger;">Celebrating Gregorian Calendar New Year!</div>
     <div style="width: 10%;font-size: larger; text-align: right; cursor: pointer;" onclick="fest.style.display='none'" >&times;</div>
-</div>
+</div> -->
 
 <nav style="display: flex; margin: 0; position: sticky; top:0; transition: background-color .5s;
 background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;">
@@ -716,8 +716,12 @@ swiper.el.addEventListener('wheel', (event) => {
     }
   }
 });
-
 </script>
+
+<!-- <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="https://code.jquery.com/ui/1.13.2/jquery-ui.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui-touch-punch/0.2.3/jquery.ui.touch-punch.min.js"></script>
+<script> $(function() { $("#widget").draggable(); }); </script> -->
 
 </body>
 </html>
