--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
 }
 
 
-::selection{ background-color: rgb(182, 237, 255); }
+::selection{
+     /* background-color: rgb(182, 237, 255); */
+     background-color: var(--tc);
+     color:var(--bc);
+}
 
 ::-webkit-scrollbar {
     width: 8px;
