--- a/index.html
+++ b/index.html
@@ -57,6 +57,8 @@
     letter-spacing: .035vw;
     font-feature-settings: "ss15";
     -webkit-font-smoothing: antialiased;
+    
+    scroll-padding-top: 5rem;
 }
 
 .material-symbols-outlined {
@@ -377,12 +379,12 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <a class="noul" href="https://zly.vg/cv.pdf">Résumé</a>
         <div class="onlyMob">
             <hr>
-            <a href="">about</a>
-            <a href="">education</a>
-            <a href="">project</a>
-            <a href="">publications</a>
-            <a href="">things I believe</a>
-            <a href="">connect</a>
+            <a href="#about" onclick="mobMenu.style.transform='translateY(-100%)'">about</a>
+            <a href="#education" onclick="mobMenu.style.transform='translateY(-100%)'">education</a>
+            <a href="#projects" onclick="mobMenu.style.transform='translateY(-100%)'">projects</a>
+            <a href="#publications" onclick="mobMenu.style.transform='translateY(-100%)'">publications</a>
+            <a href="#beliefs" onclick="mobMenu.style.transform='translateY(-100%)'">things I believe</a>
+            <a href="#connect" onclick="mobMenu.style.transform='translateY(-100%)'">connect</a>
         </div>
         <!-- <a translate="no" style="font-family:'Bootstrap-icons'; font-size: smaller; width: fit-content;" href="javascript: void(0)" onclick="changeTheme()" class="noarr noul">&#xF288;</a> -->
     </div>
