--- a/index.html
+++ b/index.html
@@ -370,21 +370,23 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     </div>
     <div id="pcMenu" style="max-width: 75%; overflow-x:auto; text-wrap: nowrap; margin: auto 0;">
         <!-- <a href="" id="contact">Contact</a> -->
-        <a class="noul" href="https://xolyn.github.io/blog">Blog</a>
+        <span class="onlyMob" style="font-size: medium;">external links</span>
+        <a class="noul" href="https://xolyn.github.io/blog">blog</a>
         <!-- <a href="https://xolyn.github.io/proj">Project</a> -->
-        <a class="noul" href="https://portfolio.zhoulingyu.net">Portfolio</a>
-        <a class="noul" href="https://drive.zhoulingyu.net" translate="no">ZDrive</a>
-        <a class="noul" href="https://xolyn.github.io/fg2.html">Font Studio</a>
+        <a class="noul" href="https://portfolio.zhoulingyu.net">portfolio</a>
+        <a class="noul" href="https://drive.zhoulingyu.net" translate="no">zDrive</a>
+        <a class="noul" href="https://xolyn.github.io/fg2.html">font studio</a>
         <!-- <a href="https://xolyn.github.io/widgets">Gadgetz</a> -->
-        <a class="noul" href="https://zly.vg/cv.pdf">Résumé</a>
+        <a class="noul" href="https://zly.vg/cv.pdf">résumé</a>
         <div class="onlyMob">
-            <hr>
-            <a href="#about" onclick="mobMenu.style.transform='translateY(-100%)'">about</a>
-            <a href="#education" onclick="mobMenu.style.transform='translateY(-100%)'">education</a>
-            <a href="#projects" onclick="mobMenu.style.transform='translateY(-100%)'">projects</a>
-            <a href="#publications" onclick="mobMenu.style.transform='translateY(-100%)'">publications</a>
-            <a href="#beliefs" onclick="mobMenu.style.transform='translateY(-100%)'">things I believe</a>
-            <a href="#connect" onclick="mobMenu.style.transform='translateY(-100%)'">connect</a>
+            <!-- <hr style="border: .5px solid var(--tc);">   --><br>
+        <span class="onlyMob" style="font-size: medium;">catalog</span>
+            <a class="noul" href="#about" onclick="mobMenu.style.transform='translateY(-100%)'">about</a>
+            <a class="noul" href="#education" onclick="mobMenu.style.transform='translateY(-100%)'">education</a>
+            <a class="noul" href="#projects" onclick="mobMenu.style.transform='translateY(-100%)'">projects</a>
+            <a class="noul" href="#publications" onclick="mobMenu.style.transform='translateY(-100%)'">publications</a>
+            <a class="noul" href="#beliefs" onclick="mobMenu.style.transform='translateY(-100%)'">things I believe</a>
+            <a class="noul" href="#connect" onclick="mobMenu.style.transform='translateY(-100%)'">connect</a>
         </div>
         <!-- <a translate="no" style="font-family:'Bootstrap-icons'; font-size: smaller; width: fit-content;" href="javascript: void(0)" onclick="changeTheme()" class="noarr noul">&#xF288;</a> -->
     </div>
