--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css'>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+<link rel="stylesheet" href="widgets/hamb.css">
 <title>Lingyu Zhou</title>
 <style>
 :root{
@@ -391,23 +392,24 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <!-- <a translate="no" style="font-family:'Bootstrap-icons'; font-size: smaller; width: fit-content;" href="javascript: void(0)" onclick="changeTheme()" class="noarr noul">&#xF288;</a> -->
     </div>
 
-    <div id="mobMenuTogg" style="margin: auto 0; cursor: pointer; border-radius: .2rem; padding: .3rem .5rem; transition: .3s;"
+    <div id="mobMenuTogg" style="margin: auto 0; cursor: pointer; border-radius: .2rem; transition: .3s; padding: .3rem;"
     onclick="menuTogg()" translate="no" >
     
-    <svg class="hb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" stroke="#000" stroke-width=".6" fill="rgba(0,0,0,0)" stroke-linecap="round" style="cursor: pointer; width: 1.5rem; margin: 0;display: block;">
+    <svg class="hb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" stroke="#000" stroke-width=".6" fill="rgba(0,0,0,0)" stroke-linecap="round"
+     style="cursor: pointer; width: 1.5rem; display: block; margin: auto 0; cursor: pointer;">
         <path d="M2,3L5,3L8,3M2,5L8,5M2,7L5,7L8,7">
             <animate dur="0.2s" attributeName="d" values="M2,3L5,3L8,3M2,5L8,5M2,7L5,7L8,7;M3,3L5,5L7,3M5,5L5,5M3,7L5,5L7,7" fill="freeze" begin="start.begin" />
             <animate dur="0.2s" attributeName="d" values="M3,3L5,5L7,3M5,5L5,5M3,7L5,5L7,7;M2,3L5,3L8,3M2,5L8,5M2,7L5,7L8,7" fill="freeze" begin="reverse.begin" />
         </path>
-        <rect width="10" height="10" stroke="none">
+        <rect width="10" height="10" stroke="none" >
             <animate dur="2s" id="reverse" attributeName="width" begin="click" />
         </rect>
-        <rect width="10" height="10" stroke="none">
+        <rect width="10" height="10" stroke="none" >
             <animate dur="0.001s" id="start" attributeName="width" values="10;0" fill="freeze" begin="click" />
             <animate dur="0.001s" attributeName="width" values="0;10" fill="freeze" begin="reverse.begin" />
         </rect>
     </svg>
-    
+
     </div>
 </nav>
 
@@ -632,8 +634,8 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 
 <article style="margin-top: 2em;">
     <div id="quote"> <i></i> <p></p></div>
-    <button id="resample" style="transition: .3s; cursor: pointer; border-radius: .5rem; border: 1px solid #eee; padding: .5rem; height: min-content;" 
-    onclick="shuffleQuotes()">resample</button>
+    <!-- <button id="resample" style="transition: .3s; cursor: pointer; border-radius: .5rem; border: 1px solid #eee; padding: .5rem; height: min-content;" 
+    onclick="shuffleQuotes()">resample</button> -->
 </article>
 
 <footer>
