--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
     onclick="menuTogg()" translate="no" >
     
     <svg class="hb" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 10 10" stroke="var(--tc)" stroke-width=".6" fill="rgba(0,0,0,0)" stroke-linecap="round"
-        style="cursor: pointer; width: 1.75rem; display: block; margin: auto 0; cursor: pointer;">
+        style="cursor: pointer; width: 1.75rem; display: block; margin: auto 0; margin-right: -.4rem; cursor: pointer;">
     <path d="M2,3L5,3L8,3M2,5L8,5M2,7L5,7L8,7" >
             <animate dur="0.2s" attributeName="d" values="M2,3L5,3L8,3M2,5L8,5M2,7L5,7L8,7;M3,3L5,5L7,3M5,5L5,5M3,7L5,5L7,7" fill="freeze" begin="start.begin" />
             <animate dur="0.2s" attributeName="d" values="M3,3L5,5L7,3M5,5L5,5M3,7L5,5L7,7;M2,3L5,3L8,3M2,5L8,5M2,7L5,7L8,7" fill="freeze" begin="reverse.begin" />
@@ -419,11 +419,10 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
 
     </div>
 
-
 </nav>
 
 <div needPopulate id="mobMenu" style="width: 100dvw; height: 100dvh; position: fixed; left:0; z-index: 2; background-color: var(--bc); flex-direction: column; transition: .5s ;">
-    <div id="mobMenu1" style="margin: 0 var(--hp); line-height: 150%; font-size: larger !important;"></div>
+    <div id="mobMenu1" style="margin: 0 var(--hp); line-height: 150%; font-size: larger !important; max-height: 80%; overflow-y: auto;"></div>
 </div>
 
 <article id="about">
