--- a/index.html
+++ b/index.html
@@ -389,12 +389,12 @@ background-color: var(--bc); color:var(--tc); padding: 2vh var(--hp);z-index: 3;
         <div class="onlyMob">
             <!-- <hr style="border: .5px solid var(--tc);">   --><br>
         <span class="onlyMob" style="font-size: medium;">catalog</span>
-            <a class="noul" href="#about" onclick="mobMenu.style.transform='translateY(-100%)'">about</a>
-            <a class="noul" href="#education" onclick="mobMenu.style.transform='translateY(-100%)'">education</a>
-            <a class="noul" href="#projects" onclick="mobMenu.style.transform='translateY(-100%)'">projects</a>
-            <a class="noul" href="#publications" onclick="mobMenu.style.transform='translateY(-100%)'">publications</a>
-            <a class="noul" href="#beliefs" onclick="mobMenu.style.transform='translateY(-100%)'">things I believe</a>
-            <a class="noul" href="#connect" onclick="mobMenu.style.transform='translateY(-100%)'">connect</a>
+            <a class="noul noarr" href="#about" onclick="mobMenu.style.transform='translateY(-100%)'">about</a>
+            <a class="noul noarr" href="#education" onclick="mobMenu.style.transform='translateY(-100%)'">education</a>
+            <a class="noul noarr" href="#projects" onclick="mobMenu.style.transform='translateY(-100%)'">projects</a>
+            <a class="noul noarr" href="#publications" onclick="mobMenu.style.transform='translateY(-100%)'">publications</a>
+            <a class="noul noarr" href="#beliefs" onclick="mobMenu.style.transform='translateY(-100%)'">things I believe</a>
+            <a class="noul noarr" href="#connect" onclick="mobMenu.style.transform='translateY(-100%)'">connect</a>
         </div>
         <!-- <a translate="no" style="font-family:'Bootstrap-icons'; font-size: smaller; width: fit-content;" href="javascript: void(0)" onclick="changeTheme()" class="noarr noul">&#xF288;</a> -->
     </div>
